--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "pchain-types-js",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "ParallelChain protocol types implementation written in typescript",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "dev": "nodemon src/dev.js",
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "test": "mocha",
+    "test:watch": "mocha --watch --watch-files './src/**/*.ts,./tests/**/*.*'",
+    "build": "tsc --project tsconfig.build.json",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint --config .eslintrc.js --ext .ts src/ --fix",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "parallelchain",
@@ -30,11 +32,23 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
-    "@types/jest": "^28.1.4",
-    "jest": "^28.1.2",
-    "nodemon": "^2.0.19",
-    "ts-jest": "^28.0.5",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "@types/bs58": "^4.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.15",
+    "@types/text-encoding-utf-8": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "chai": "^4.3.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsdoc": "^44.2.6",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "merkletreejs": "^0.3.10",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.8",
+    "sinon": "^15.1.0",
+    "tweetnacl": "^1.0.3"
   }
 }
