--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es5",
     "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "esModuleInterop": true
-  },
-  "include": ["src", "serialize.js"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+    "esModuleInterop": true,
+    "downlevelIteration": true
+  }
 }
